@@ -33,7 +33,7 @@ my $build = $package->new(
     'File::ShareDir'   => '0',
     'ExtUtils::CBuilder' => '0',
     'File::Path'       => '2.08',
-    'File::Fetch'      => '0',
+    'File::Fetch'      => '0.24',
     'File::Find'       => '0',
     'Digest::SHA'      => '0',
     'Archive::Extract' => '0',
@@ -45,7 +45,7 @@ my $build = $package->new(
   configure_requires   => {  #need to have for running: perl Buil.PL
     'File::Spec'       => '0',
     'File::Path'       => '2.08',
-    'File::Fetch'      => '0',
+    'File::Fetch'      => '0.24',
     'File::Find'       => '0',
     'Digest::SHA'      => '0',
     'Archive::Extract' => '0',
