@@ -112,7 +112,7 @@ my $source_packs = [
         pack => 'png',
         dirname => 'libpng-1.4.1',
         url => [
-          'http://downloads.sourceforge.net/libpng/libpng-1.4.1.tar.gz',
+          'http://downloads.sourceforge.net/project/libpng/01-libpng-master/1.4.1/libpng-1.4.1.tar.gz',
           'http://froggs.de/libpng/libpng-1.4.1.tar.gz',
         ],
         sha1sum  => '7a3488f5844068d67074f2507dd8a7ed9c69ff04',
@@ -329,7 +329,7 @@ my $source_packs = [
         pack => 'png',
         dirname => 'libpng-1.4.1',
         url => [
-          'http://downloads.sourceforge.net/libpng/libpng-1.4.1.tar.gz',
+          'http://downloads.sourceforge.net/project/libpng/01-libpng-master/1.4.1/libpng-1.4.1.tar.gz',
           'http://froggs.de/libpng/libpng-1.4.1.tar.gz',
         ],
         sha1sum  => '7a3488f5844068d67074f2507dd8a7ed9c69ff04',
@@ -441,7 +441,7 @@ my $source_packs = [
         pack => 'png',
         dirname => 'libpng-1.4.1',
         url => [
-          'http://downloads.sourceforge.net/libpng/libpng-1.4.1.tar.gz',
+          'http://downloads.sourceforge.net/project/libpng/01-libpng-master/1.4.1/libpng-1.4.1.tar.gz',
           'http://froggs.de/libpng/libpng-1.4.1.tar.gz',
         ],
         sha1sum  => '7a3488f5844068d67074f2507dd8a7ed9c69ff04',
@@ -531,7 +531,7 @@ my $source_packs = [
         pack => 'png',
         dirname => 'libpng-1.4.1',
         url => [
-          'http://downloads.sourceforge.net/libpng/libpng-1.4.1.tar.gz',
+          'http://downloads.sourceforge.net/project/libpng/01-libpng-master/1.4.1/libpng-1.4.1.tar.gz',
           'http://froggs.de/libpng/libpng-1.4.1.tar.gz',
         ],
         sha1sum  => '7a3488f5844068d67074f2507dd8a7ed9c69ff04',
